--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
     "emotion": "^10.0.27",
     "mongodb-stitch-browser-sdk": "^4.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "reactstrap": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
